--- a/index.html
+++ b/index.html
@@ -4,8 +4,55 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 </head>
 <body>
-	
+	<header class="main-header container">
+        <h1 class="visually-hidden">
+            Foliac Web-studio
+        </h1>
+        <a class="logo-link"
+            <img src="img/foliac-logo.png" alt="logo">
+        </a>
+        <nav>
+            <ul class="main-navigation">
+                <li>
+                    <a href="#">
+                        Accueil
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Portfolio
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        About
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Contact
+                    </a>
+                </li>
+            </ul>
+        </nav>
+	</header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h2>
+                    voici votre prochain portfolio
+                </h2>
+                <p>
+                    un template psd simple et gratuit
+                </p>
+                <a href="#">
+                    Mestravaux
+                </a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
