--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Foliac</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 </head>
@@ -11,7 +12,7 @@
         <h1 class="visually-hidden">
             Foliac Web-studio
         </h1>
-        <a class="logo-link"
+        <a class="logo-link">
             <img src="img/foliac-logo.png" alt="logo">
         </a>
         <nav>
