--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
         </a>
         <nav>
             <ul class="main-navigation">
-                <li>
-                    <a href="#">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
                         Accueil
                     </a>
                 </li>
-                <li>
-                    <a href="#">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
                         Portfolio
                     </a>
                 </li>
-                <li>
-                    <a href="#">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
                         About
                     </a>
                 </li>
-                <li>
-                    <a href="#">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
                         Contact
                     </a>
                 </li>
@@ -46,10 +46,10 @@
                 <h2>
                     voici votre prochain portfolio
                 </h2>
-                <p>
+                <p class="info">
                     un template psd simple et gratuit
                 </p>
-                <a href="#">
+                <a class="container-link" href="#">
                     Mestravaux
                 </a>
             </div>
