add section portfolio

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </h3>
                 <ul class="menu">
                     <li class="menu-item">
-                        <button type="button" class="btn-menu-item">
+                        <button type="button" class="btn-menu-item active">
                             Tous les projects
                         </button>
                     </li>
@@ -94,7 +94,7 @@
                 <h3 class="visually-hidden">
                     Images
                 </h3>
-                <div class="image-wrapper image-wrapper-one">
+                <div class="image-wrapper image-wrapper-left">
                     <img src="img/multiple-items.png" alt="multiple items">
                     <div class="image-green">
                         <a class="text" href="#">
@@ -102,7 +102,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="image-wrapper image-wrapper-two">
+                <div class="image-wrapper image-wrapper-right">
                     <img src="img/identite-visuelle.png" alt="identite visuelle">
                     <div class="image-green">
                         <a class="text" href="#">
@@ -110,15 +110,15 @@
                         </a>
                     </div>
                 </div>
-                <div class="image-wrapper image-wrapper-three">
-                    <img src="img/123.jpg" alt="app">
+                <div class="image-wrapper image-wrapper-left">
+                    <img src="img/app1.jpg" alt="app" width="450" height="490">
                     <div class="image-green">
                         <a class="text" href="#">
                             Forest app
                         </a>
                     </div>
                 </div>
-                <div class="image-wrapper image-wrapper-four">
+                <div class="image-wrapper image-wrapper-right">
                     <img src="img/prototype.png" alt="prototipe">
                     <div class="image-green">
                         <a class="text" href="#">
